# comment-cleaner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: buid.yaml  release.yaml
src/comment_cleaner/: cleaner.py
tests/: cleaner_test.py  test_cleaner.py
